# wasm4pm

./: .claude  .claude-wasm4pm-config  .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .markdownlint.json  .mlc.config.json  .npmrc  AGENT3_COMPLETION_REPORT.md  AGENT_5_IMPLEMENTATION.md  BENCHMARK_SUMMARY.txt  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRACTS_IMPLEMENTATION.md  CONTRACTS_SUMMARY.txt  Cargo.toml  DATASET-SUMMARY.txt  DATASETS-INDEX.md  DEPLOYMENT.md  FAQ.md  GEMBA-CHECKLIST.md  GEMBA-FILES.txt  GEMBA-IMPLEMENTATION-SUMMARY.md  GEMBA-QUICK-REFERENCE.md  HBR-BLUE-OCEAN-INNOVATION-WASM4PM-VS-CELONIS.md  IMPLEMENTATION_SUMMARY_TASK14.md  INDEX.md  INTEGRATION_TESTS_IMPLEMENTATION.md  KAIZEN_METRICS_SETUP.md  KERNEL_COMMIT_MESSAGE.txt  KERNEL_COMPLETION_REPORT.txt  KERNEL_IMPLEMENTATION_SUMMARY.md  LAYER_6A_OPTIMIZATION.md  LICENSE  MIGRATION_GUIDE.md  Makefile  OBSERVABILITY_DELIVERABLES.md  PERFORMANCE_REPORT_v26.4.5.md  (+27 more)
process_mining_wasm/: .gitignore  .npmignore  API.md  Cargo.toml  DEVELOPMENT.md  README.md  STATUS.md  package.json
process_mining_wasm/__tests__/: discovery.test.ts  io.test.ts  types.test.ts
process_mining_wasm/examples/: nodejs.js
process_mining_wasm/src/: analysis.rs  api.ts  client.ts  conformance.rs  discovery.rs  genetic_discovery.rs  ilp_discovery.rs  io.rs  lib.rs  models.rs  state.rs  types.rs  xes_format.rs
wasm4pm/: .gitignore  .npmignore  ALGORITHMS.md  API.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_PROFILES.md  DEVELOPMENT.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INTEGRATION_TESTS_SUMMARY.md  LICENSE  MCP.md  QUICKSTART.sh  README.md  TEST_IMPLEMENTATION_SUMMARY.txt  THESIS-V2.md  THESIS.md  build.sh  package.json  publish.sh  smoke-test.sh  test.sh  tsconfig.json  vitest.config.ts  wasm-pack.toml
wasm4pm/.pictl/: checkpoint
wasm4pm/.wasm4pm/: checkpoint
wasm4pm/__tests__/: analysis.test.ts  basic.test.ts  discovery.test.ts  integration.test.js  integration.test.ts  io.test.ts  parity.test.ts  setup.ts  state.test.ts  types.test.ts  watch.test.ts
wasm4pm/__tests__/analysis/: available-functions.test.ts  case-duration.test.ts  event-statistics.test.ts
wasm4pm/__tests__/benchmarks/: browser.test.ts
wasm4pm/__tests__/conformance/: token-replay.test.ts
wasm4pm/__tests__/discovery/: alpha-plus-plus.test.ts  dfg.test.ts  init.test.ts
wasm4pm/__tests__/fixtures/: revops_sales_pipeline.xes
wasm4pm/__tests__/helpers/: fixtures.ts
wasm4pm/__tests__/integration/: README.md  browser.test.ts  nodejs.test.ts  phase3-determinism-scale.test.ts  phase3-e2e.test.ts  websocket.test.ts
wasm4pm/__tests__/io/: eventlog-xes.test.ts  ocel-json.test.ts
wasm4pm/__tests__/prediction/: additions.test.ts  bench-drift.test.ts  bench-features.test.ts  bench-helpers.ts  bench-next-activity.test.ts  bench-outcome.test.ts  bench-remaining-time.test.ts  bench-resource.test.ts
wasm4pm/__tests__/state/: clear-all.test.ts  object-deletion.test.ts  object-storage.test.ts
wasm4pm/__tests__/types/: wasm-eventlog.test.ts  wasm-ocel.test.ts
wasm4pm/__tests__/workflow/: full-workflow.test.ts  streaming-conformance.test.ts
wasm4pm/benches/: analytics.rs  autonomy_jtbd_validation.rs  conformance.rs  conformance_bench.rs  extended_discovery.rs  fast_algorithms.rs  helpers.rs  hot_kernels.rs  jtbd_benchmark.rs  medium_algorithms.rs  ml_algorithms.rs  ml_streaming_sim_bench.rs  powl_discovery.rs  scalability_benchmark.rs  slow_algorithms.rs  streaming_algorithms.rs  tier1_discovery.rs  tier2_metaheuristic.rs
wasm4pm/benches/closed_claw/: README.md  autonomic_loop.rs  gates.rs  golden.rs  metrics.rs  mod.rs  pipeline_a_discovery.rs  pipeline_b_conformance.rs  pipeline_c_ocel.rs  pipeline_d_semantic.rs  pipeline_e_manufacturing.rs  pipeline_f_ml.rs  receipt.rs  registry.rs  rl_algorithms.rs
wasm4pm/benchmarks/: BROWSER_BENCHMARKS.md  QUICKSTART.md  README.md  benchmark.rs  compare.js  dashboard.html  results.csv  wasm_bench_runner.js  wasm_bench_worker.js
wasm4pm/cli/: index.ts
wasm4pm/docs/: PLAN-e2e-autonomics-remediation.md  bench_conformance_results.md  bench_ml_streaming_sim_results.md  bench_tier1_results.md  bench_tier2_metaheuristic_results.md  performance_thesis.md
wasm4pm/docs/benchmarks/: README.md
wasm4pm/examples/: README.md  browser-full.html  browser.html  gpu_wgsl_benchmark.rs  interactive-demo.html  nodejs.js  react-component.tsx  react-example.tsx  scalability_report.rs  webpack.config.js
wasm4pm/src/: WATCH_MODE.md  ablation.rs  advanced_algorithms.rs  algorithms.rs  align_etconformance.rs  alignment_fitness.rs  alignments.rs  analysis.rs  anomaly.rs  api.ts  batches.rs  binary_format.rs  bpmn_import.rs  cache.rs  capability_registry.rs  causal.rs  causal_graph.rs  client.ts  complexity_metrics.rs  config.ts  conformance.rs  conformance_cache.rs  correlation_miner.rs  data_quality.rs  declare_conformance.rs  discovery.rs  ensemble.rs  error.rs  errors.ts  etconformance_precision.rs  fast_discovery.rs  feature_extraction.rs  feature_importance.rs  filters.rs  final_analytics.rs  generalization.rs  genetic_discovery.rs  guards.rs  hand_stats.rs  hierarchical.rs  (+71 more)
wasm4pm/src/gpu/: linucb_kernel.wgsl  mod.rs  wgpu_binding.rs
wasm4pm/src/ml/: linucb.rs  mod.rs
wasm4pm/src/powl/: extensive_playout.rs  footprints.rs  label_replacing.rs  mod.rs  simplify.rs  streaming.rs  transitive.rs
wasm4pm/src/probabilistic/: bloom.rs  count_min.rs  hyperloglog.rs  mod.rs  streaming_log.rs  wasm_bindings.rs
wasm4pm/src/streaming/: mod.rs  streaming_alpha.rs  (+9 more)
wasm4pm/tests/: PARITY_VALIDATION_REPORT.md  autonomic_tests.rs  bench_compare.rs  benchmarks.rs  comprehensive_parity_tests.rs  comprehensive_pm4py_reference.py  filter_tests.rs  full_parity_tests.rs  generate_pm4py_reference.py  gpu_conformance_vectors.rs  gpu_wgsl_validation_test.rs  linucb_tests.rs  parity_tests.rs  regression_detector_test.rs  reinforcement_tests.rs
wasm4pm/validators/: README.md  cli.mjs  http.mjs  index.mjs  io.mjs  observability.mjs  package.json  performance.mjs  websocket.mjs
(+507 files in other folders)
