[package]
name = "wasm4pm"
version = "26.4.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance process mining algorithms in WebAssembly for JavaScript/TypeScript"
repository = "https://github.com/seanchatmangpt/wasm4pm"
documentation = "https://github.com/seanchatmangpt/wasm4pm/blob/main/README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6"
once_cell = "1.19"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
console_error_panic_hook = "0.1"
itertools = "0.14.0"
rustc-hash = "2"
smallvec = { version = "1.13", features = ["serde"] }
roxmltree = "0.19"
fastrand = "2"
statrs = { version = "0.17", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [] }
uuid = { version = "1.16.0", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
simd-json = "0.13"

[[bench]]
name = "fast_algorithms"
harness = false

[[bench]]
name = "medium_algorithms"
harness = false

[[bench]]
name = "slow_algorithms"
harness = false

[[bench]]
name = "analytics"
harness = false

[[bench]]
name = "conformance"
harness = false

[features]
default = []
console_error_panic_hook = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.bench]
opt-level = 3
lto = false
