[package]
name = "pictl"
version = "26.4.10"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance process mining algorithms in WebAssembly for JavaScript/TypeScript"
repository = "https://github.com/seanchatmangpt/pictl"
documentation = "https://docs.rs/pictl"
homepage = "https://github.com/seanchatmangpt/pictl"
readme = "README.md"
keywords = [
    "process-mining",
    "wasm",
    "webassembly",
    "petri-net",
    "bpm",
]
categories = [
    "wasm",
    "algorithms",
    "data-structures",
    "science",
]
authors = ["Sean Chatman <info@chatmangpt.com>"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6"
once_cell = "1.19"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
console_error_panic_hook = { version = "0.1", optional = true }
itertools = "0.14.0"
rustc-hash = "2"
smallvec = { version = "1.13", features = ["serde"] }
roxmltree = "0.19"
fastrand = "2.1.0"
rand = "0.8"
rand_distr = "0.4"
statrs = { version = "0.17", default-features = false, optional = true }
rayon = { version = "1.10", optional = true }
wgpu     = { version = "0.19", optional = true }
pollster = { version = "0.3",  optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [] }
uuid = { version = "1.16.0", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
simd-json = "0.13"
blake3 = "1"
naga = { version = "29", features = ["wgsl-in", "spv-out"] }

[[bench]]
name = "fast_algorithms"
harness = false

[[bench]]
name = "medium_algorithms"
harness = false

[[bench]]
name = "slow_algorithms"
harness = false

[[bench]]
name = "analytics"
harness = false

[[bench]]
name = "conformance"
harness = false

[[bench]]
name = "conformance_bench"
harness = false

[[bench]]
name = "ml_algorithms"
harness = false

[[bench]]
name = "streaming_algorithms"
harness = false

[[bench]]
name = "extended_discovery"
harness = false

[[bench]]
name = "powl_discovery"
harness = false

[[bench]]
name = "tier2_metaheuristic"
harness = false

[[bench]]
name = "tier1_discovery"
harness = false

[[bench]]
name = "ml_streaming_sim_bench"
harness = false

[[bench]]
name = "hot_kernels"
harness = false

[[bench]]
name = "closed_claw"
path = "benches/closed_claw/mod.rs"
harness = false

[[bench]]
name = "jtbd_benchmark"
harness = false

[[bench]]
name = "autonomy_jtbd_validation"
harness = true

[[bench]]
name = "scalability_benchmark"
harness = false

[[example]]
name = "scalability_report"

[[example]]
name = "gpu_wgsl_benchmark"

[features]
# Deployment profiles - default to cloud (full feature set) for npm package
default = ["cloud"]
browser = ["basic", "simd", "hand_rolled_stats"]
edge = ["basic", "advanced", "ml", "streaming_basic", "hand_rolled_stats"]
fog = ["edge", "swarm", "streaming_full", "statrs", "ocel"]
iot = ["minimal", "streaming_basic", "hand_rolled_stats"]
cloud = ["basic", "advanced", "ml", "streaming_full", "swarm", "statrs", "powl", "ocel", "alignment_fitness", "petri_net_playout", "extensive_playout", "align_etconformance", "montecarlo", "console_error_panic_hook", "rayon"]
# Backward compatibility alias
compat = ["cloud"]

# Algorithm categories
basic = ["discovery_basic", "conformance_basic"]
advanced = ["discovery_advanced", "conformance_full"]
minimal = ["discovery_minimal"]
swarm = ["discovery_swarm"]

# Discovery algorithms
discovery_minimal = []  # dfg only (always included)
discovery_basic = ["discovery_minimal"]
discovery_advanced = ["discovery_basic"]
discovery_swarm = ["discovery_advanced"]

# Individual discovery algorithms (empty features for module-level cfg gating)
alpha_plus_plus = []
heuristic_miner = []
inductive_miner = []
genetic = []
ilp = []
a_star = []
aco = []
pso = []
simulated_annealing = []

# Conformance
conformance_basic = []  # Basic conformance (token replay, temporal profiles)
conformance_full = ["conformance_basic"]  # Full conformance (+ alignments)

# ML/Prediction
ml = []
ml_classify = []
ml_cluster = []
ml_forecast = []
ml_anomaly = []
ml_regress = []
ml_pca = []

# Streaming
streaming_basic = []
streaming_full = ["streaming_basic"]
streaming_dfg = []
streaming_skeleton = []
streaming_heuristic = []
streaming_inductive = []

# Conformance (empty features for module-level cfg gating)
token_replay = []
alignments = []
diagnostics = []

# New 80/20 gap-filling modules
alignment_fitness = []
petri_net_playout = []
extensive_playout = []
align_etconformance = []
montecarlo = []

# Dependencies
statrs = ["dep:statrs"]  # Optional dependency
powl = []  # POWL modules (always compiled if feature enabled, just controls lib.rs exports)
ocel = []  # OCEL support

# Utility features
hand_rolled_stats = []  # Use internal median instead of statrs
simd = []  # SIMD acceleration (always available on WASM)
console_error_panic_hook = ["dep:console_error_panic_hook"]

# GPU acceleration — RTX 4090 target, falls back to CPU when no GPU present
gpu = ["dep:wgpu", "dep:pollster"]

[profile.release]
# Optimize for binary size ("z" instead of "3")
opt-level = "z"
# Link-time optimization (already enabled)
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Remove panic unwinding code to reduce binary size
panic = "abort"
# Strip symbols
strip = "debuginfo"

[profile.bench]
opt-level = 3
lto = false
